<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/boxOne"
            style="@style/WhiteBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide_custom"
            android:layout_marginTop="@dimen/margin_wide_custom"
            android:layout_marginEnd="@dimen/margin_wide_custom"
            android:text="@string/boxOneTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/boxTwo"
            style="@style/WhiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="@dimen/margin_wide_custom"
            android:layout_marginTop="@dimen/margin_wide_custom"
            android:text="@string/boxTwoTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxOne" />

        <TextView
            android:id="@+id/boxThree"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_wide_custom"
            android:layout_marginEnd="@dimen/margin_wide_custom"
            android:text="@string/boxThreeTxt"
            app:layout_constraintBottom_toTopOf="@+id/boxFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toTopOf="@+id/boxTwo" />

        <TextView
            android:id="@+id/boxFour"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"


            android:layout_margin="@dimen/margin_wide_custom"
            android:text="@string/boxFourTxt"
            app:layout_constraintBottom_toTopOf="@+id/boxFive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toBottomOf="@+id/boxThree" />

        <TextView
            android:id="@+id/boxFive"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_wide_custom"
            android:layout_marginEnd="@dimen/margin_wide_custom"
            android:text="@string/boxFiveTxt"
            app:layout_constraintBottom_toBottomOf="@+id/boxTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toBottomOf="@+id/boxFour" />

        <TextView
            android:id="@+id/label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide_custom"
            android:text="@string/howToPlayTxt"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide_custom"
            android:text="@string/ruleTxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_text"
            app:layout_constraintTop_toBottomOf="@+id/boxTwo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redButton"
            android:textSize="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
            app:layout_constraintEnd_toStartOf="@+id/yellowButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_wide_custom"
            android:text="@string/yellowButton"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/greenButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/redButton" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greenButton"
            android:textSize="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yellowButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
